--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "SEE LICENSE IN LICENSE",
   "bin": {
     "node-rps": "./bin/rps-cli.js",
-    "node-rpsls": "rpsls-cli.js"
+    "node-rpsls": "./bin/rpsls-cli.js"
   },
   "dependencies": {
     "minimist": "^1.2.8"
